[package]
name = "paton"
version = "0.1.0"
edition = "2021"

[lib]
name = "paton"
path = "src/lib.rs"

[[bin]]
name = "paton"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.5.9", features = ["cargo"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
crossbeam-utils = "0.8.20"
serde = { version = "1.0.204", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
threadpool = "1.8.1"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
# Enable optimizations for tests
opt-level = 3
