[package]
name = "rogue"
version = "0.1.0"
edition = "2021"

[lib]
name = "rogue"
path = "src/lib.rs"

[[bin]]
name = "rogue"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.5.9", features = ["cargo"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
crossbeam-utils = "0.8.20"
derive_more = "0.99.18"
enum-display-derive = "0.1.1"
git2 = "0.19.0"
hex = "0.4.3"
http = "1.1.0"
openssl = { version = "0.10.66", features = ["v111", "vendored"] }
openssl-sys = { version = "0.9.103", features = ["vendored"] }
random-string = "1.1.0"
rayon = "1.10.0"
regex = "1.10.5"
reqwest = { version = "0.12.7", features = ["__tls", "blocking", "json"] }
serde = { version = "1.0.204", features = ["derive", "rc", "serde_derive"] }
serde_arrays = "0.1.0"
serde_json = "1.0.120"
serde_xml = "0.9.1"
serde_yaml = "0.9.34"
tar = "0.4.41"
thiserror = "1.0.63"
walkdir = "2.5.0"
zip = "2.2.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
# Enable optimizations for tests
opt-level = 3

[profile.release]
strip = "debuginfo"

[features]
remote = []
